--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   },
   "dependencies": {
     "rdndmb-html5-to-touch": "^7.0.0-alpha.1",
-    "react-dnd": "^13.1.1",
-    "react-dnd-html5-backend": "^14.0.1",
+    "react-dnd": "^15.1.2",
+    "react-dnd-html5-backend": "^15.1.2",
     "react-dnd-multi-backend": "^7.0.0-alpha.4"
   },
   "devDependencies": {
@@ -53,18 +53,18 @@
     "jest": "^27.0.6",
     "npm-check-updates": "^11.8.3",
     "prettier": "^2.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.39",
+    "react-dom": "^17.0.11",
     "rollup": "^2.56.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.5",
     "tslib": "^2.3.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0-rc.2",
+    "react-dom": "^18.0.0-rc.2"
   },
   "scripts": {
     "build": "rollup -c",
